styles/page/pattaya.css
/* ... */
.section-stats-1 {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 24px;

    img {
        /* school was a while ago... f(x) = (x-x1) * (y2 - y1) / (x2 - x1) + y1 */
        width: clamp(343px, (100vw - 400px) * (640px - 343px) / (700px - 400px) + 343px, 640px);
        border-radius: clamp(30px, (100vw - 400px) * (53px - 30px) / (700px - 400px) + 30px, 53px);
        box-shadow: -2px 4px 11.6px 0px #00000040;
    }
}

.section-stats-more {
    display: flex;
    align-items: center;
    justify-content: space-around;
    flex-wrap: wrap;

    gap: clamp(32px, (100vw - 400px) * (80px - 32px) / (1400px - 400px) + 32px, 80px);

    div {
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;
        gap: clamp(16px, (100vw - 400px) * (24px - 16px) / (1400px - 400px) + 16px, 24px);

        p,
        img {
            width: clamp(343px, (100vw - 400px) * (520px - 343px) / (700px - 400px) + 343px, 520px);
        }
        img {
            border-radius: clamp(30px, (100vw - 400px) * (53px - 30px) / (700px - 400px) + 30px, 53px);
            box-shadow: -2px 4px 11.6px 0px #00000040;
        }
    }
}

/* #region footer */

footer {
    background-color: var(--color-main1);
    height: 134px;
    margin-bottom: 88px;
    width: 100%;
    padding: 24px max(calc(50% - 720px + 120px), clamp(30px, calc((120px * 100vw / 840px) / 2.5), 120px));
    display: flex;
    align-items: center;

    div {
        width: 100%;
        display: flex;
        justify-content: space-between;
        align-items: flex-end;
    }

    p {
        color: white;
        font-size: 1rem;
    }

    a {
        text-decoration: none;
        color: white;
        font-family: "Palanquin";
        font-size: 1rem;
    }

    .footer-copyright {
        display: flex;
        align-items: center;
        ul {
            display: flex;
            align-items: flex-start;
            list-style-type: none;
            display: flex;
            flex-direction: column;
            gap: 8px;
        }

        img {
            height: 16px;
        }

        .copyright {
            display: flex;
            align-items: center;
            gap: 4px;
        }
    }
    .footer-social {
        display: flex;
        align-items: flex-end;
        justify-content: flex-end;
        width: 200px;
        gap: clamp(8px, 3.5vw, 16px);

        img {
            height: 24px;
        }
        a {
            display: flex;
            align-items: center;
        }
    }
}

/* #endregion footer */

/* #region media queries */
@media screen and (min-width: 1250px) {
    .section-stats-more {
        /* gap handled by space-around */
        gap: 0px;
    }
}

@media screen and (min-width: 769px) {
    p,
    li,
    a {
        color: var(--paragraph-color);
    }
    /* #region header min-width: 769px */
    .nav-desktop {
        display: flex;
        flex-direction: column;
        align-items: center;
        position: relative;

        img {
            position: absolute;
            object-fit: contain;
            width: calc(100% + 50px);

            opacity: 0;
            transition: all 200ms ease-in-out;
        }

        .hover0 {
            top: 5px;
        }
        .hover1 {
            bottom: 19px;
        }
        .hover2 {
            top: 15px;
        }
        .hover3 {
            top: -24px;
            height: 80px;
        }
    }

    .nav-mobile {
        display: none;
    }

    header {
        nav {
            height: 128px;
            padding: 0px max(calc(50% - 600px));
            justify-content: flex-start;
            gap: clamp(32px, 8vw, 102px);
        }

        ul {
            transition: all 0s ease-in-out; /* desktop -> mobile transition only unidirectional */

            position: relative;
            height: 100%;
            width: auto;
            gap: clamp(16px, 6vw, 72px);
            background-color: #00000000;
        }

        img {
            height: 72px;
            width: 72px;
            padding-left: 6px;
        }
    }
    /* #endregion header min-width: 769px*/

    /* #region content-main min-width: 769px*/

    .content-main {
        display: flex;
        flex-direction: column;
        padding-top: 80px;
    }

    .section-header {
        display: flex;
        flex-direction: row;
        justify-content: space-between;

        p {
            font-size: 2rem;
            width: 95%;
        }

        aside p {
            font-size: 1rem;
        }

        .section-author {
            padding: 16px 16px;
            width: 45%;

            p {
                font-size: 1rem;
                text-align: left;
            }
            .name {
                gap: 6px;
            }
        }
    }

    .section-highlights {
        > p {
            display: block;
        }
    }

    /* #endregion content-main min-width: 769px*/

    /* #region footer min-width: 769px*/
    footer {
        height: 152px;
        margin-bottom: 0;
        align-items: center;

        div {
            align-items: center;
        }

        .footer-copyright ul {
            display: flex;
            flex-direction: row;
            align-items: center;
            gap: clamp(8px, 5vw, 72px);
        }

        .copyright {
            order: -2;
            font-size: 1.125rem;
        }

        .footer-social {
            img {
                height: 32px;
            }

            a {
                display: flex;
                align-items: center;
            }
        }
    }

    /* #endregion footer min-width: 769px*/
}
/* ... */

